# libmahjong-specs

./: README.md  event_notify.h  flake.nix  round_start.cpp
.github/templates/cpp/: CMakeLists.txt
.github/templates/rust/: Cargo.toml
.github/workflows/: build-dist.yml
capnp-cpp/: event_action.h  event_notify.cpp  player.cpp  player.h  tile.h
cmake/: libmahjong-capnp-config.cmake.in
examples/: standard_play.jsonc
proto/: client.proto  event.proto  player.proto  rules.proto  tile.proto  winds.capnp  winds.proto
proto/client/: player.capnp  player.proto  player_client.capnp  player_client.proto  round_start.capnp  round_start.proto
proto/event/: action.proto  event_action.capnp  event_notify.capnp  notify.proto
proto/queue/: game_complete.capnp  game_starting.capnp  player_joined_lobby.capnp  player_left_lobby.capnp  queue_player.capnp  queue_request.capnp
proto/rules/: game_rules.capnp  game_rules.proto  scoring_rule.capnp  scoring_rule.proto
proto/tile/: set.proto  tile.capnp  tile.proto  tile_set.capnp
src/: event_action.cpp  event_action_capnp.rs  event_notify_capnp.rs  game_complete.cpp  game_complete.h  game_complete_capnp.rs  game_starting.cpp  game_starting.h  game_starting_capnp.rs  lib.rs  player_capnp.rs  player_joined_lobby.cpp  player_joined_lobby.h  player_joined_lobby_capnp.rs  player_left_lobby.cpp  player_left_lobby.h  player_left_lobby_capnp.rs  queue_player.cpp  queue_player.h  queue_player_capnp.rs  queue_request.cpp  queue_request.h  queue_request_capnp.rs  round_start.h  round_start_capnp.rs  tile.cpp  tile_capnp.rs  winds.cpp  winds.h  winds_capnp.rs
